<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ranker_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/letv_main_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ranker_fragment_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/event_rank_cover"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- 排名 -->

        <TextView
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranker_fragment_header_rank" />

        <ImageView style="@style/event_rank_line_divider_head" />

        <!-- 球队 -->

        <TextView
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/ranker_fragment_header_itemName" />

        <ImageView style="@style/event_rank_line_divider_head" />

        <!-- 胜 -->

        <TextView
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranker_fragment_header_win" />

        <ImageView style="@style/event_rank_line_divider_head" />

        <!-- 平 -->

        <LinearLayout
            android:id="@+id/ranker_fragment_draw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                style="@style/event_rank_tv_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ranker_fragment_header_equality" />

            <ImageView style="@style/event_rank_line_divider_head" />
        </LinearLayout>

        <!-- 负 -->

        <TextView
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranker_fragment_header_lose" />

        <ImageView style="@style/event_rank_line_divider_head" />

        <!-- 积分 -->

        <TextView
            android:id="@+id/ranker_fragment_score_tv"
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranker_fragment_header_score" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/ranker_fragment_expandableListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00ffffff"
        android:cacheColorHint="@null"
        android:divider="@null"
        android:fadingEdge="none"
        android:listSelector="#00000000" />

</LinearLayout>