<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ranker_item_main"
        android:layout_width="fill_parent"
        android:layout_height="27dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- 排名 -->

        <TextView
            android:id="@+id/ranker_fragment_item_rank"
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ranker_fragment_header_rank" />

        <ImageView style="@style/event_rank_line_divider" />

        <!-- 球队 -->


        <!-- <TextView -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_weight="3" -->
        <!-- android:gravity="center" -->
        <!-- android:text="@string/ranker_fragment_header_itemName" /> -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <com.letv.cache.view.LetvImageView
                android:id="@+id/ranker_fragment_item_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_default" />

            <TextView
                android:id="@+id/ranker_fragment_item_name"
                style="@style/event_rank_tv_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/ranker_fragment_header_itemName" />
        </LinearLayout>

        <ImageView style="@style/event_rank_line_divider" />

        <!-- 胜 -->

        <TextView
            android:id="@+id/ranker_fragment_item_win"
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ranker_fragment_header_win" />

        <ImageView style="@style/event_rank_line_divider" />

        <!-- 平 -->

        <LinearLayout
            android:id="@+id/ranker_fragment_item_equality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ranker_fragment_item_equality_tv"
                style="@style/event_rank_tv_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ranker_fragment_header_equality" />

            <ImageView style="@style/event_rank_line_divider" />
        </LinearLayout>
        <!--
        <TextView
            android:id="@+id/ranker_fragment_item_equality"
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ranker_fragment_header_equality" />

        <ImageView style="@style/event_rank_line_divider" />
        -->


        <!-- 负 -->

        <TextView
            android:id="@+id/ranker_fragment_item_lose"
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ranker_fragment_header_lose" />

        <ImageView style="@style/event_rank_line_divider" />

        <!-- 积分 -->

        <TextView
            android:id="@+id/ranker_fragment_item_score"
            style="@style/event_rank_tv_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ranker_fragment_header_score" />

        <!-- <TableRow -->


        <!-- ></TableRow> -->
    </LinearLayout>

    <LinearLayout style="@style/event_rank_line_divider_horizontal" />

</LinearLayout>